68346: Further alignment fixes and separate drag handle component

--- a/src/app/+item-page/edit-item-page/item-bitstreams/item-bitstreams.component.scss
+++ b/src/app/+item-page/edit-item-page/item-bitstreams/item-bitstreams.component.scss
@@ -17,9 +17,14 @@
 }
 
 .drag-handle {
+  visibility: hidden;
   &:hover {
     cursor: grab;
   }
+}
+
+.bitstream-row:hover .drag-handle {
+  visibility: visible !important;
 }
 
 .cdk-drag-preview {
